[project]
name = "PGJones.dev Backend"
version = ""
description = ""
authors = [
    {name = "Phil Jones", email = "philip.graham.jones@googlemail.com"},
]
dependencies = [
    "feedgen>=0.9.0",
    "hypercorn[h3]>=0.13.2",
    "quart>=0.18.0",
    "quart-rate-limiter>=0.7.0",
    "quart-trio>=0.10.0",
]
requires-python = ">=3.11"
license = {text = "Private"}
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "flake8>=4.0.1",
    "bandit>=1.7.4",
    "vulture>=2.5",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "djhtml>=1.5.2",
    "setuptools>=63.2.0",
    "pip-audit>=2.4.2",
    "types-toml>=0.10.8",
]

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.vulture]
min_confidence = 100

[tool.pytest.ini_options]
addopts = "--showlocals"
asyncio_mode = "auto"
pythonpath = ["src"]

[[tool.mypy.overrides]]
module =["feedgen.feed", "h11", "trio"]
ignore_missing_imports = true

[tool.pdm.scripts]
audit = "pip-audit"
format-black = "black src/ tests/"
format-djhtml = "djhtml src/backend/templates -t 2"
format-isort = "isort src tests"
format = {composite = ["format-black", "format-djhtml", "format-isort"]}
lint-bandit = "bandit -r src/"
lint-black = "black --check --diff src/ tests/"
lint-djhtml = "djhtml src/backend/templates -t 2 --check"
lint-flake8 = "flake8 src/ tests/"
lint-isort = "isort --check --diff src tests"
lint-mypy = "mypy src/backend tests"
lint-vulture = "vulture src"
lint = {composite = ["lint-bandit", "lint-black", "lint-djhtml", "lint-flake8", "lint-isort", "lint-mypy", "lint-vulture"]}
start = {cmd = "quart --app src/backend/run.py run --port 5050", env = {"DEBUG" = "true"}}
test = "pytest tests/"
